fix issue with map overflowing in chrome

--- a/style.css
+++ b/style.css
@@ -13,11 +13,15 @@ html {
 #map {
   width: 100%;
   height: 100%;
+  z-index: -99;
+  overflow: hidden;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 #map-wrapper {
   width: 90vw;
-  height: auto;
+  height: 70vh;
   max-height: 70vh;
   position: relative;
 }
